[gd_scene load_steps=5 format=2]

[ext_resource path="res://source/units/Unit.tscn" type="PackedScene" id=1]
[ext_resource path="res://graphics/units/doomsday_surfer.png" type="Texture" id=2]
[ext_resource path="res://source/units/DoomsdaySurfer.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="DoomsdaySurfer" index="0" instance=ExtResource( 1 )]

frames = SubResource( 1 )
script = ExtResource( 3 )

[node name="QuadrantFreezeTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 10.0
one_shot = true
autostart = false

[connection signal="timeout" from="QuadrantFreezeTimer" to="." method="_on_QuadrantFreezeTimer_timeout"]


